Remove .type & .size directives when building on win32.  Fixes mingw binutils 2.15.91 bustage. Bug #262422 r+sr=dmose